Moved Equipment and Campaign Notes to their own tabs.

--- a/TailsOfEquestria/sheet.html
+++ b/TailsOfEquestria/sheet.html
@@ -17,11 +17,15 @@
 <div class="tabs">
   <!-- Labels-->
   <input type="radio" name="attr_sheet_type" id="sheetTabPC" value="0" checked="checked" spellcheck="false"/>
-  <label for="sheetTabPC">PC</label>
+  <label for="sheetTabPC" title="Main sheet for Player Characters.">PC</label>
   <input type="radio" name="attr_sheet_type" id="sheetTabNPC" value="1" spellcheck="false"/>
-  <label for="sheetTabNPC">NPC</label>
+  <label for="sheetTabNPC" title="Main sheet for Non-Player Characters.">NPC</label>
   <input type="radio" name="attr_sheet_type" id="sheetTabVehicle" value="2" spellcheck="false"/>
-  <label for="sheetTabVehicle">Vehicle</label>
+  <label for="sheetTabVehicle" title="Main sheet for Vehicles.">Vehicle</label>
+  <input type="radio" name="attr_sheet_type" id="sheetTabEquipment" value="3" spellcheck="false"/>
+  <label for="sheetTabEquipment" title="Keep track of your character's equipment here.">Equipment</label>
+  <input type="radio" name="attr_sheet_type" id="sheetTabNotes" value="4" spellcheck="false"/>
+  <label for="sheetTabNotes" title="Record additional notes about your character, the campaign world, or anything else here.">Campaign Notes</label>
   <!-- Contents-->
   <div class="tabContents">
     <div class="tab" id="sheetTabPCContainer">
@@ -294,11 +298,9 @@
                                     <option value="Cutie Mark">Cutie Mark</option>
                                     <option value="Race">Race</option>
                                     <option value="Level Up">Level Up</option>
-                                    <option value="Book">Book</option>
                                     <option value="Item">Item</option>
-                                    <option value="Spell">Spell</option>
-                                    <option value="Story">Story</option>
                                     <option value="Temporary">Temporary</option>
+                                    <option value="Training">Training</option>
                                     <option value="Other">Other</option>
                                 </select>
                           </div>
@@ -375,35 +377,36 @@
               <h1>Quirks:</h1>
                 <fieldset class="repeating_quirks">
                   <div class="quirk">
-                    <div class="quirkIcon" style="font-size: 2em;"></div>
-                      <div class="labelledUnderlined">
-                        <label></label>
-                        <div class="inner">
-                            <input type="text" name="attr_name" placeholder="Quirk Name" spellcheck="false"/>
+                    <div style="display: inline-block; vertical-align: top; width: 0.4in;">
+                      <div class="quirkIcon" style="font-size: 2em;"></div>
+                    </div>
+                    <div style="display: inline-block; width: 6.5in;">
+                        <div class="labelledUnderlined">
+                          <label></label>
+                          <div class="inner">
+                              <input type="text" name="attr_name" placeholder="Quirk Name" spellcheck="false"/>
+                          </div>
                         </div>
-                      </div>
-                      <div class="labelledUnderlined">
-                        <label>Source:</label>
-                        <div class="inner">
-                              <select name="attr_source">
-                                  <option value="null" selected="selected">Pick One</option>
-                                  <option value="Race">Race</option>
-                                  <option value="Curse">Curse</option>
-                                  <option value="Item">Item</option>
-                                  <option value="Personality">Personality</option>
-                                  <option value="Physical">Physical</option>
-                                  <option value="Story">Story</option>
-                                  <option value="Temporary">Temporary</option>
-                                  <option value="Other">Other</option>
-                              </select>
+                        <div class="labelledUnderlined">
+                          <label>Source:</label>
+                          <div class="inner">
+                                <select name="attr_source">
+                                    <option value="null" selected="selected">Pick One</option>
+                                    <option value="Main">Main</option>
+                                    <option value="Race">Race</option>
+                                    <option value="Item">Item</option>
+                                    <option value="Temporary">Temporary</option>
+                                    <option value="Other">Other</option>
+                                </select>
+                          </div>
                         </div>
-                      </div>
-                      <div class="labelledUnderlined">
-                        <label>Notes</label>
-                        <div class="inner">
-                            <input type="text" name="attr_notes" spellcheck="false"/>
+                        <div class="labelledUnderlined">
+                          <label>Notes</label>
+                          <div class="inner">
+                              <input type="text" name="attr_notes" spellcheck="false"/>
+                          </div>
                         </div>
-                      </div>
+                    </div>
                   </div>
                 </fieldset>
             </div>
@@ -444,14 +447,12 @@
           </div>
           <div>
             <div class="inlineBlock" style="margin-right: 1em; vertical-align: top; width: 48%;">
-              <h1>Equipment:</h1>
-                <textarea name="attr_equipment" style="height: 4in;"></textarea>
+              <h1>Appearance:</h1>
+                <textarea name="attr_appearance" style="height: 2in;"></textarea>
             </div>
             <div class="inlineBlock" style="width: 48%;">
-              <h1>Appearance/Cutie Mark:</h1>
-                <textarea name="attr_appearance"></textarea>
-              <h1>Campaign Notes:</h1>
-                <textarea name="attr_campaignNotes"></textarea>
+              <h1>Background:</h1>
+                <textarea name="attr_background" style="height: 2in;"></textarea>
             </div>
           </div>
         </div>
@@ -611,7 +612,7 @@
               </div>
               <div class="damageModifiers">
                   <div class="labelledUnderlined">
-                    <label>Damage Modifiers:</label>
+                    <label>Damage Reduction:</label>
                     <div class="inner">
                         <input type="text" name="attr_damageReduction" spellcheck="false"/>
                     </div>
@@ -788,10 +789,8 @@
                 <textarea name="attr_appearance" style="height: 4in;"></textarea>
             </div>
             <div class="inlineBlock" style="width: 48%;">
-              <h1>Equipment:</h1>
-                <textarea name="attr_equipment"></textarea>
-              <h1>Campaign Notes:</h1>
-                <textarea name="attr_campaignNotes"></textarea>
+              <h1>Tactics:</h1>
+                <textarea name="attr_tactics" style="height: 4in;"></textarea>
             </div>
           </div>
         </div>
@@ -891,16 +890,50 @@
           <div>
             <div class="inlineBlock" style="margin-right: 1em; vertical-align: top; width: 48%;">
               <h1>Description:</h1>
-                <textarea name="attr_appearance" style="height: 5.7in;"></textarea>
+                <textarea name="attr_appearance" style="height: 4in;"></textarea>
             </div>
             <div class="inlineBlock" style="width: 48%;">
               <h1>Crew:</h1>
-                <textarea name="attr_vehicleCrew"></textarea>
-              <h1>Cargo:</h1>
-                <textarea name="attr_equipment"></textarea>
-              <h1>Campaign Notes:</h1>
-                <textarea name="attr_campaignNotes"></textarea>
+                <textarea name="attr_vehicleCrew" style="height: 4in;"></textarea>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab" id="sheetTabEquipmentContainer">
+      <div class="main-container">
+        <div class="tabSheet equipmentSheet">
+          <div class="equipmentHeader"><span style="width: 2in;">Item Name</span><span style="width: 0.5in;">Qty.</span><span style="width: 4.5in;">Notes</span></div>
+          <div class="equipmentBody">
+              <fieldset class="repeating_equipment">
+                  <div class="labelledUnderlined" style="width: 2in;">
+                    <label></label>
+                    <div class="inner">
+                        <input type="text" name="attr_name" spellcheck="false"/>
+                    </div>
+                  </div>
+                  <div class="labelledUnderlined" style="width: 0.5in;">
+                    <label></label>
+                    <div class="inner">
+                        <input type="number" name="attr_quantity" spellcheck="false"/>
+                    </div>
+                  </div>
+                  <div class="labelledUnderlined" style="width: 4.5in;">
+                    <label></label>
+                    <div class="inner">
+                        <input type="text" name="attr_notes" spellcheck="false"/>
+                    </div>
+                  </div>
+              </fieldset>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab" id="sheetTabNotesContainer">
+      <div class="main-container">
+        <div class="tabSheet notesSheet">
+          <div class="notes">
+              <textarea name="attr_campaignNotes"></textarea>
           </div>
         </div>
       </div>
@@ -1106,66 +1139,102 @@
 
   // Migrate sheet data from prior versions to the most recent version.
   function migrateVersion(cb) {
-    // Migrate from v1.5 to v1.6
-    let _migrate1_5 = (cb1_5) => {
-      // Migrates a hard-coded talent.
-      let __migrateHardcodedTalent = (prefix, source, cb1_5talent) => {
-        let attrList = [prefix + 'name', prefix + 'dice', prefix + 'trait', prefix + 'updowngrade', prefix + 'equation', prefix + 'readOnlyView', prefix + 'notes'];
-        parseAttrs(attrList, values => {
-          if (values[prefix + 'name']) {
-            let nextRowID = generateRowID();
-            let repPrefix = `repeating_talents_${nextRowID}_`;
-            setAttrs({
-              // Void the hard-coded talent's name.
-              [prefix + 'name']: '',
+    _migrate1_5(cb);
+  }
 
-              // Copy the hard-coded talent's values to a new repeating talent.
-              [repPrefix + 'name']: values[prefix + 'name'],
-              [repPrefix + 'source']: source,
-              [repPrefix + 'dice']: values[prefix + 'dice'],
-              [repPrefix + 'trait']: values[prefix + 'trait'],
-              [repPrefix + 'updowngrade']: values[prefix + 'updowngrade'],
-              [repPrefix + 'equation']: values[prefix + 'equation'],
-              [repPrefix + 'readOnlyView']: values[prefix + 'readOnlyView'],
-              [repPrefix + 'notes']: values[prefix + 'notes']
-            }, { silent: true }, cb1_5talent);
-          }
-          else
-            cb1_5talent();
-        });
-      };
-
-      // Migrates a hard-coded quirk.
-      let __migrateHardcodedQuirk = (prefix, cb1_5quirk) => {
-        let attrList = [prefix + 'name', prefix + 'notes'];
-        parseAttrs(attrList, values => {
-          if (values[prefix + 'name']) {
-            let nextRowID = generateRowID();
-            let repPrefix = `repeating_quirks_${nextRowID}_`;
-            setAttrs({
-              // Void the hard-coded quirk.
-              [prefix + 'name']: '',
-
-              // Copy the hard-coded quirk's values to a new repeating quirk.
-              [repPrefix + 'name']: values[prefix + 'name'],
-              [repPrefix + 'notes']: values[prefix + 'notes']
-            }, { silent: true }, cb1_5quirk);
-          }
-          else
-            cb1_5quirk();
-        });
-      };
-
-      // Transfer cutie mark and race talents to repeating section.
-      __migrateHardcodedTalent('talent_cutieMark_', 'Cutie Mark', () => {
-        __migrateHardcodedTalent('talent_racial_', 'Race', () => {
-          // Transfer main quirk to repeating section.
-          __migrateHardcodedQuirk('quirk_main_', cb1_5);
+  /**
+   * Migrate from v1.5 to 1.6.
+   * @param {func} cb   Callback
+   */
+  function _migrate1_5(cb) {
+    _migrate1_5_hardcodedTalent('talent_cutieMark_', 'Cutie Mark', () => {
+      _migrate1_5_hardcodedTalent('talent_racial_', 'Race', () => {
+        _migrate1_5_mainQuirk(() => {
+          _migrate1_5_equipment(cb);
         });
       });
-    };
+    });
+  }
 
-    _migrate1_5(cb);
+  /**
+   * Migrate a hardcoded talent from v1.5 to repeating talents section.
+   * @param {string} prefix   The attribute prefix for the talent.
+   * @param {string} source   The new value for the talent's source property.
+   * @param {func} cb         Callback.
+   */
+  function _migrate1_5_hardcodedTalent(prefix, source, cb) {
+    let attrList = [prefix + 'name', prefix + 'dice', prefix + 'trait', prefix + 'updowngrade', prefix + 'equation', prefix + 'readOnlyView', prefix + 'notes'];
+    parseAttrs(attrList, values => {
+      if (values[prefix + 'name']) {
+        let nextRowID = generateRowID();
+        let repPrefix = `repeating_talents_${nextRowID}_`;
+        setAttrs({
+          // Void the hard-coded talent's name.
+          [prefix + 'name']: '',
+
+          // Copy the hard-coded talent's values to a new repeating talent.
+          [repPrefix + 'name']: values[prefix + 'name'],
+          [repPrefix + 'source']: source,
+          [repPrefix + 'dice']: values[prefix + 'dice'],
+          [repPrefix + 'trait']: values[prefix + 'trait'],
+          [repPrefix + 'updowngrade']: values[prefix + 'updowngrade'],
+          [repPrefix + 'equation']: values[prefix + 'equation'],
+          [repPrefix + 'readOnlyView']: values[prefix + 'readOnlyView'],
+          [repPrefix + 'notes']: values[prefix + 'notes']
+        }, { silent: true }, cb);
+      }
+      else
+        cb();
+    });
+  }
+
+  /**
+   * Migrate main quirk from v1.5 to repeating quirks section.
+   * @param {func} cb   Callback.
+   */
+  function _migrate1_5_mainQuirk(cb) {
+    let prefix = 'quirk_main_';
+    let attrList = [prefix + 'name', prefix + 'notes'];
+    parseAttrs(attrList, values => {
+      if (values[prefix + 'name']) {
+        let nextRowID = generateRowID();
+        let repPrefix = `repeating_quirks_${nextRowID}_`;
+        setAttrs({
+          // Void the hard-coded quirk.
+          [prefix + 'name']: '',
+
+          // Copy the hard-coded quirk's values to a new repeating quirk.
+          [repPrefix + 'name']: values[prefix + 'name'],
+          [repPrefix + 'notes']: values[prefix + 'notes']
+        }, { silent: true }, cb);
+      }
+      else
+        cb();
+    });
+  }
+
+  /**
+   * Migrate equipment from v1.5 to v1.6.
+   * @param {func} cb   Callback.
+   */
+  function _migrate1_5_equipment(cb) {
+    getAttrs(['equipment'], values => {
+      let equipmentRaw = values['equipment'] || '';
+
+      // Transfer equipment from the 1.5 textarea to the 1.6 repeating section.
+      if (equipmentRaw) {
+        let equipmentList = equipmentRaw.split('\n');
+
+        _.each(equipmentList, item => {
+          let nextRowID = generateRowID();
+          let repPrefix = `repeating_equipment_${nextRowID}_`;
+          setAttrs({
+            [repPrefix + 'name']: item,
+            'equipment': ''
+          }, { silent: true }, cb);
+        });
+      }
+    });
   }
 
   // Registers an event listener for attribute changes.
@@ -1194,9 +1263,9 @@
    */
   function parseAttrs(attrs, cb) {
     try {
-      getAttrs(attrs, function(values) {
+      getAttrs(attrs, values => {
         try {
-          _.each(attrs, function(attr) {
+          _.each(attrs, attr => {
             if(_.isUndefined(values[attr]))
               values[attr] = 0;
             else if(!isNaN(values[attr]))
