Display version # in banner.

--- a/TailsOfEquestria/sheet.html
+++ b/TailsOfEquestria/sheet.html
@@ -13,6 +13,7 @@
 <input type="checkbox" name="attr_useApiExplodingHoof" style="display: none;" spellcheck="false"/>
 <div class="top"><img src="https://i.pinimg.com/originals/15/90/a7/1590a71a0c382f70a499c977caa6e3bb.jpg"/>
   <div class="mask"></div>
+  <div class="version">Version 1.6</div>
 </div>
 <div class="tabs">
   <!-- Labels-->
