Updated sheet and preview
Reorganized sheet to be more user-friendly and added new affinities

--- a/Arask/arask.html
+++ b/Arask/arask.html
@@ -1,8 +1,5 @@
 <h1> Arask Character Sheet </h1>
-<h3> Version 1.1 </h3>
-<text> Sheets by Taliyah Larson </text>
-<br>
-<br>
+<h3> * For Handbook 1.3 * </h3>
 <text> Character Name: </text>
 <input type="text" name="attr_character_name" />
 <!-- Level Stuff
@@ -28,23 +25,8 @@ TODO: Style Width -->
 <input type="number" value="0" name="attr_pp"/>
 <text> / </text>
 10
-<br>
 
-<br>
-<strong>Racial Traits</strong>
-<br>
-<textarea name="wizard_power" rows="8" cols="10">Describe your racial abilities.</textarea>
-<br>
-<strong>Wizard Power</strong>
-<br>
-<textarea name="wizard_power" rows="8" cols="10">Describe your wizard power.</textarea>
-<br>
-<strong>Power Burst</strong>
-<br>
-<textarea name="wizard_power" rows="8" cols="10">Describe your power burst.</textarea>
-<!-- TODO: Make the power point max modifiable?
-<input type="text" value="10" name="attr_ppMax"/> -->
-<br>
+
 <hr>
 <h2>Character Stats</h2>
 Move Speed: <input type="text" name="attr_speed" value="30 ft."/>
@@ -306,6 +288,8 @@ Dice Bonus:
         <option>Golemancy</option>
         <option>Ethermancy</option>
         <option>Runecrafting</option>
+        <option>Red Magic</option>
+        <option>Blood Magic</option>
         <option disabled>-------------------------</option>
         <option disabled>B-Class</option>
         <option disabled>-------------------------</option>
@@ -324,6 +308,10 @@ Dice Bonus:
         <option>Divination</option>
         <option>Necromancy</option>
         <option>Transmutation</option>
+        <option>Null Magic</option>
+        <option>Alchemy</option>
+        <option>Chaomancer</option>
+        <option>Ritualist</option>
         <option value="1">Custom</option>
     </select>
     <text>Type:</text>
@@ -356,6 +344,13 @@ Gold: <input type="number" name="gold" value="0"/>
 <!-- Start on other Section -->
 <hr>
 <h2>Character Description</h2>
+<strong>Wizard Power</strong>
+<br>
+<textarea name="wizard_power" rows="8" cols="10">Describe your wizard power.</textarea>
+<br>
+<strong>Power Burst</strong>
+<textarea name="wizard_power" rows="8" cols="10">Describe your power burst.</textarea>
+<br>
 Age:    <input type="text" name="age" value="" />
 Weight: <input type="text" name="weight" value="" />
 Gender: <input type="text" name="gender" value="" />
@@ -364,8 +359,20 @@ Height: <input type="text" name="height" value="" />
 Hair:   <input type="text" name="hair" value="" />
 Eyes:   <input type="text" name="eyes" value="" />
 <br>
+
+
+<strong>Racial Traits</strong>
+<br>
+<textarea name="wizard_power" rows="8" cols="10">Describe your racial abilities.</textarea>
+<br>
+
 <strong>Notes and Backstory</strong> <br>
 <textarea name="description" rows="10" cols="10">Enter a description about your character.</textarea>
+<br>
+
+<!-- TODO: Make the power point max modifiable?
+<input type="text" value="10" name="attr_ppMax"/> -->
+<br>
 
 <hr>
 <br><br>
