--- a/Arask/arask.html
+++ b/Arask/arask.html
@@ -346,10 +346,10 @@ Gold: <input type="number" name="gold" value="0"/>
 <h2>Character Description</h2>
 <strong>Wizard Power</strong>
 <br>
-<textarea name="wizard_power" rows="8" cols="10">Describe your wizard power.</textarea>
+<textarea name="attr_wizardPower" rows="8" cols="10">Describe your wizard power.</textarea>
 <br>
 <strong>Power Burst</strong>
-<textarea name="wizard_power" rows="8" cols="10">Describe your power burst.</textarea>
+<textarea name="attr_powerBurst" rows="8" cols="10">Describe your power burst.</textarea>
 <br>
 Age:    <input type="text" name="age" value="" />
 Weight: <input type="text" name="weight" value="" />
@@ -363,11 +363,11 @@ Eyes:   <input type="text" name="eyes" value="" />
 
 <strong>Racial Traits</strong>
 <br>
-<textarea name="wizard_power" rows="8" cols="10">Describe your racial abilities.</textarea>
+<textarea name="attr_raceTraits" rows="8" cols="10">Describe your racial abilities.</textarea>
 <br>
 
 <strong>Notes and Backstory</strong> <br>
-<textarea name="description" rows="10" cols="10">Enter a description about your character.</textarea>
+<textarea name="attr_backstory" rows="10" cols="10">Enter a description about your character.</textarea>
 <br>
 
 <!-- TODO: Make the power point max modifiable?
