--- a/Arask/arask.html
+++ b/Arask/arask.html
@@ -30,7 +30,7 @@ TODO: Style Width -->
 <hr>
 <h2>Character Stats</h2>
 Move Speed: <input type="text" name="attr_speed" value="30 ft."/>
-Stat Points: <input type="number" value="42" name="attr_statPoints"/>
+Stat Points: <input type="number" value="35" name="attr_statPoints"/>
 <br>
 Favor: <input type="number" name=attr_favor value="0"/>
 Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" name=attr_focus_max value="1"/>
@@ -39,7 +39,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Strength </h3>
 <text>Score</text> 
-<input type="text" name="attr_strength" value="0" />
+<input type="text" name="attr_strength" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Strength...
 /roll 1d10 + @{strength_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{strength_pref} + @{strength_additional}" name="roll_strength"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -64,7 +64,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Intelligence </h3>
 <text>Score</text> 
-<input type="text" name="attr_intelligence" value="0" />
+<input type="text" name="attr_intelligence" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Intelligence...
 /roll 1d10 + @{intelligence_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{intelligence_pref} + @{intelligence_additional}" name="roll_intelligence"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -90,7 +90,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Dexterity </h3>
 <text>Score</text> 
-<input type="text" name="attr_dexterity" value="0" />
+<input type="text" name="attr_dexterity" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Dexterity...
 /roll 1d10 + @{dexterity_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{dexterity_pref} + @{dexterity_additional}" name="roll_dexterity"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -116,7 +116,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Charisma </h3>
 <text>Score</text> 
-<input type="text" name="attr_charisma" value="0" />
+<input type="text" name="attr_charisma" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Charisma...
 /roll 1d10 + @{charisma_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{charisma_pref} + @{charisma_additional}" name="roll_charisma"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -143,7 +143,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Awareness </h3>
 <text>Score</text> 
-<input type="text" name="attr_awareness" value="0" />
+<input type="text" name="attr_awareness" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Awareness...
 /roll 1d10 + @{awareness_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{awareness_pref} + @{awareness_additional}" name="roll_awareness"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -170,7 +170,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Resilience </h3>
 <text>Score</text> 
-<input type="text" name="attr_resilience" value="0" />
+<input type="text" name="attr_resilience" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Resilience...
 /roll 1d10 + @{resilience_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{resilience_pref} + @{resilience_additional}" name="roll_resilience"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -197,7 +197,7 @@ Focus: <input type="number" name=attr_focus value="1"/> / <input type="number" n
 <br>
 <h3> Luck </h3>
 <text>Score</text> 
-<input type="text" name="attr_luck" value="0" />
+<input type="text" name="attr_luck" value="6" />
 <button type='roll' value="/em @{character_name} is rolling Luck...
 /roll 1d10 + @{luck_mod} + ?{Mana/PowerBurst/Other Mod|0} + @{luck_pref} + @{luck_additional}" name="roll_luck"></button>
 <!-- Option List for Adding or subtracting 1d4 -->
@@ -334,13 +334,13 @@ Dice Bonus:
 
 <hr>
 <h2>Possessions</h2>
-Copper: <input type="number" name="copper" value="0"/>
-Silver: <input type="number" name="silver" value="0"/>
-Gold: <input type="number" name="gold" value="0"/>
+Copper: <input type="number" name="attr_copper" value="0"/>
+Silver: <input type="number" name="attr_silver" value="0"/>
+Gold: <input type="number" name="attr_gold" value="0"/>
 <br>
 <strong>Inventory</strong>
 <br>
-<textarea name="inventory" rows="10" cols="10">Describe your belongings.</textarea>
+<textarea name="attr_inventory" rows="10" cols="10">Describe your belongings.</textarea>
 <!-- Start on other Section -->
 <hr>
 <h2>Character Description</h2>
@@ -351,13 +351,13 @@ Gold: <input type="number" name="gold" value="0"/>
 <strong>Power Burst</strong>
 <textarea name="attr_powerBurst" rows="8" cols="10">Describe your power burst.</textarea>
 <br>
-Age:    <input type="text" name="age" value="" />
-Weight: <input type="text" name="weight" value="" />
-Gender: <input type="text" name="gender" value="" />
+Age:    <input type="text" name="attr_age" value="" />
+Weight: <input type="text" name="attr_weight" value="" />
+Gender: <input type="text" name="attr_gender" value="" />
 <br>
-Height: <input type="text" name="height" value="" />
-Hair:   <input type="text" name="hair" value="" />
-Eyes:   <input type="text" name="eyes" value="" />
+Height: <input type="text" name="attr_height" value="" />
+Hair:   <input type="text" name="attr_hair" value="" />
+Eyes:   <input type="text" name="attr_eyes" value="" />
 <br>
 
 
