--- a/Arask/arask.html
+++ b/Arask/arask.html
@@ -6,7 +6,7 @@
 TODO: Style lines to make them grid-aligned.  Add box width min/max -->
 <strong> Level: </strong>
 <input type="number" value="1" name="attr_level"/>
-Race: <input type="text" name="race" value=""/>
+Race: <input type="text" name="attr_race" value=""/>
 <br>
 <!-- Player Character's Gameplay Stats
 TODO: Style Width -->
