--- a/TailsOfEquestria/sheet.html
+++ b/TailsOfEquestria/sheet.html
@@ -11,7 +11,7 @@
 <input type="hidden" name="attr_character_sheet" style="display: none;" value="TailsOfEquestria" spellcheck="false"/>
 <input type="hidden" name="attr_debug" style="display: none;" value="" spellcheck="false"/>
 <input type="checkbox" name="attr_useApiExplodingHoof" style="display: none;" spellcheck="false"/>
-<div class="top"><img src="https://i.pinimg.com/originals/15/90/a7/1590a71a0c382f70a499c977caa6e3bb.jpg"/>
+<div class="top"><img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/TailsOfEquestria/banner.jpeg"/>
   <div class="mask"></div>
   <div class="version">Version 1.6</div>
 </div>
