Tesero y Gloria: minor fixes, refactor one <table>

--- a/Tesoro-y-Gloria/tesoroygloria.html
+++ b/Tesoro-y-Gloria/tesoroygloria.html
@@ -1,4 +1,4 @@
-<img src=https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/logo.png  style=width:600px;height:190px>
+<img src=https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/logo.jpg  style=width:600px;height:190px>
 
 <div>
     <button type="action" name="act_pericias" >Pericias y Combate</button>
@@ -16,6 +16,22 @@
         
     <!-- NOMBRE, CLASE, FAMA Y DG -->
     
+    <div class="main-info">
+    		<div class="title"><span>NOMBRE </span></div>
+	        <div><input type="text" name="attr_character_name" /></div>
+	        <div class="title"><span>Clase </span></div>
+	        <div><input type="text" style=style=width:100px;height:28px name=attr_ClasePJ ></div>
+	        <div class="title"><button type='roll' value='&{template:default} {{name=@{character_name} tira sus pg después del Entretiempo}} {{Resultado=[[@{DG}]]}}' name='tirada_DG'></button>Dados de Golpe</div>
+	        <div><input type="text" name="attr_DG" style=width:70px;height:28px ></div>
+
+	        <div class="title"><span>Gloria </span></div>
+	        <div><input type="text" name="attr_ptsGloria" /></div>
+	        <div class="title"><span>Fama </span></div>
+	        <div><input type="text" style=style=width:100px;height:28px name=attr_Fama ></div>
+	        <div class="title"><button type='roll' value='&{template:default} {{name=@{character_name} se esfuerza en el camino}} {{Resultado=[[1d6+@{modSab}]]}}' name='tarea_camino'></button>Tareas del camino y PM </div>
+	        <div><input type="number" name="attr_PM" style=width:70px;height:28px ></div>
+    </div>
+<!--  
     <table>
 	    <tr>
 	        <th>NOMBRE </th>
@@ -33,7 +49,7 @@
 	        <td><button type='roll' value='&{template:default} {{name=@{character_name} se esfuerza en el camino}} {{Resultado=[[1d6+@{modSab}]]}}' name='tarea_camino'></button>Tareas del camino y PM </td>
 	        <td><input type="number" name="attr_PM" style=width:70px;height:28px ></td>
 	    </tr>
-	</table>
+	</table> -->
     <br></br>
 
 <!-- CARACTERÍSTICAS Y PERICIAS -->
