Tesero y Gloria: adjust images

--- a/Tesoro-y-Gloria/tesoroygloria.html
+++ b/Tesoro-y-Gloria/tesoroygloria.html
@@ -1,4 +1,4 @@
-<img src=https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/logo.jpg  style=width:600px;height:190px>
+<img src="https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/logo.jpg"  style="width:600px;height:190px">
 
 <div>
     <button type="action" name="act_pericias" >Pericias y Combate</button>
@@ -118,16 +118,16 @@
     <!-- Page 1:PG, CA, DA Y VELOCIDAD -->
 
     <h4>
-        <img src="https://cdn.imgbin.com/7/19/24/imgbin-skull-drawing-transparency-and-translucency-skull-gray-skull-faDGkVsgqSr3q2KXXUFym1CRW.jpg" class="skull">
+        <img src="https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/skull.png" class="skull">
         <span>Pts de Golpe</span>
         <input type="text" name=attr_pgTotales class="w32">
         <input type="text" name=attr_pgActuales class="w32"> 
-        <img src="https://www.pngfind.com/pngs/m/460-4608121_free-png-shield-template-png-png-image-with.png" class="shield">
+        <img src="https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/armor.png" class="armor">
         <span>Clase de Armadura</span> 
         <input type="text" name=attr_CA class="w32" value="10" >
-        <img src="https://toppng.com/public/uploads/preview/sword-clipart-silhouette-parallel-11563059003zjxounf48y.png" class="sword">
+        <img src="https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/da-base.png" class="sword">
         <span>DA base</span> 
-    	<select name="attr_DA" class="dtype">
+    	<select name="attr_DA" class="dtype sword">
     		<option value="d1">1</option> 
     		<option value="d4">d4</option>
     		<option value="d6">d6</option>
@@ -136,7 +136,7 @@
     		<option value="d12">d12</option>
     		<option value="d20">d20</option>
             </select>
-        <img src="https://www.pinclipart.com/picdir/middle/128-1280265_walking-footprints-cliparts-4-buy-clip-art-transparent.png" class="foot">
+        <img src="https://raw.githubusercontent.com/Anduh/roll20-character-sheets/TyG/Tesoro-y-Gloria/images/velocidad.png" class="foot">
         <span> Velocidad </span>
         <input type="text" name=attr_Vel class="w32" value=10 >
     </h4>
